# softmgr

./: meson.build
res/: main.css  res.xml
src/: ApplicationWindow.vala  main.vala
src/models/: IController.vala  Soft.vala
src/widgets/: DetailDialog.vala  InstalledBox.vala  InstalledItem.vala  MessageDialog.vala  SearchBox.vala  SearchItem.vala  SearchWidget.vala
src/yay/: YayController.vala
